deploy-nginx-phpfpm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-nginx-phpfpm
  namespace: ${BRANCH}
spec:
  selector:
    matchLabels:
      app: nginx-phpfpm
  template:
    metadata:
      labels:
        app: nginx-phpfpm
    spec:
      containers:
      - name: nginx-phpfpm
        image: 728490037630.dkr.ecr.eu-north-1.amazonaws.com/bigproject_${SERVICE}_${BRANCH}:${TAG}
        imagePullPolicy: Always
      imagePullSecrets:
      - name: regcred
