deploy-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-nginx
  namespace: ${BRANCH}
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: 728490037630.dkr.ecr.eu-north-1.amazonaws.com/bigproject:${TAG}
        imagePullPolicy: Always
      imagePullSecrets:
      - name: regcred
