deploy-node.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-node
  namespace: ${BRANCH}  
spec:
  selector:
    matchLabels:
      app: node
  template:  
    metadata:
      labels:
        app: node
    spec:
      containers:
      - name: node
        image: 728490037630.dkr.ecr.eu-north-1.amazonaws.com/bigproject_${SERVICE}_${BRANCH}:${TAG}
        imagePullPolicy: Always
      imagePullSecrets:
      - name: regcred
