service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: sv-nginx
  namespace: ${BRANCH}
  labels:
    app: nginx
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
